--- a/src/404.html
+++ b/src/404.html
@@ -6,6 +6,7 @@ sitemap: false
 ---
 
 <article>
-  <header><h1>404: page not found</h1></header>
+  <img alt="Oh snap..." src="/assets/404.png"/>
+  <header><h2>404: page not found</h2></header>
   <p>Have you tried turning it off and on again?</p>
 </article>
